Modification in MVC, database connection, add fetch all functionality and some other functions in controller

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 DATABASE_HOST = localhost
 # DATABSE_PORT = 3306
 DATABASE_USER = root
-DATABASE_PASSWORD = 
+DATABASE_PASSWORD = squad%40123
 DATABASE_NAME = nithil
 
 
