--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-validator": "^6.14.2",
     "http-errors": "~1.6.3",
     "mongodb": "^4.12.1",
     "mongoose": "^6.8.0",
